appId: com.nicolasmartin.dankfolio
env:
    jupSymbol: "JUP"
    jupMint: "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN"
    solSymbol: "SOL"
    solMint: "So11111111111111111111111111111111111111112"
    dankSymbol: "DankCoin"
    dankMint: "DankCoin1111111111111111111111111111111"
    usdcSymbol: "USDC"
    usdcMint: "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v"
---
- runFlow: ../common/app-setup.yaml

- tapOn:
      id: "trending-coin-card-${jupMint}"
- tapOn:
      id: "trade-button"
- assertVisible:
      id: from-token-selector-${solMint}
- assertVisible:
      id: to-token-selector-${jupMint}
- tapOn:
      id: to-token-selector-${jupMint}
- tapOn:
      id: search-result-${dankMint}
- assertVisible:
      id: to-token-selector-${dankMint}
- assertVisible:
      id: from-token-selector-${solMint}
- tapOn:
      id: swap-coins-button
- assertVisible:
      id: from-token-selector-${dankMint}
- assertVisible:
      id: to-token-selector-${solMint}
- tapOn:
      id: from-token-selector-${dankMint}
- tapOn:
      id: search-result-${usdcMint}
- assertVisible: "Selected token: ${usdcSymbol}"
- assertVisible:
      id: to-token-selector-${solMint}
- tapOn:
      id: swap-coins-button
- assertVisible:
      id: from-token-selector-${solMint}
- assertVisible:
      id: to-token-selector-${usdcMint}
- assertVisible: "2.5"
- tapOn:
      id: amount-percentage-text-50
- assertVisible: "1.25"
- assertVisible: "0.95"
- assertVisible: "100"
