appId: com.nicolasmartin.kaiju
env:
    JUP_SYMBOL: "jup"
---
- runFlow: ../common/app-setup.yaml

# - assertVisible: ".*Trending Coins.*"

- tapOn:
      id: "trending-coin-item-${JUP_SYMBOL}"

- assertVisible:
      id: "coin-detail-screen-${JUP_SYMBOL}"

- runFlow:
      file: ../components/coin-detail.yaml
      env:
          COIN_SYMBOL: "${JUP_SYMBOL}"

- assertVisible:
      id: "trade-button-${JUP_SYMBOL}"
