appId: com.nicolasmartin.dankfolio
env:
    FROM_COIN_ADDRESS: "So11111111111111111111111111111111111111112" # SOL
    FROM_COIN_SYMBOL: "SOL"
    TO_COIN_ADDRESS: "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v" # USDC
    TO_COIN_SYMBOL: "USDC"
    TRADE_AMOUNT_FROM: "0.1"
---
- runFlow: ../common/app-setup.yaml

# 1. Navigate to the Coin Detail screen for the 'FROM' coin (SOL)
#    (This assumes a flow similar to how home screen tests tap on a coin card)
- tapOn:
      id: "trending-coin-card-${TO_COIN_ADDRESS}"
- assertVisible:
      id: "coin-detail-screen"

- assertVisible:
      id: "trade-button"
- tapOn:
      id: "trade-button"
- assertVisible:
      id: "trade-screen"

- assertVisible: "FROM"
- assertVisible:
      id: "from-token-selector"
- assertVisible: "TO"
- assertVisible:
      id: "to-token-selector"

      # NOTE: USE THIS IN ANOTHER TEST CASE
# - runFlow:
#       file: ../components/select-token-in-selector.yaml
#       env:
#           coinAddressToSelect: "${TO_COIN_ADDRESS}"
#           coinSymbolToSelect: "${TO_COIN_SYMBOL}"

- tapOn:
      id: "from-token-selector-amount-input"
- inputText: "${TRADE_AMOUNT_FROM}"
- assertVisible:
      id: "from-token-selector-amount-input"

- waitForAnimationToEnd
- assertVisible:
      id: "to-token-selector-amount-input"

# HACK: idk why we have to press here or else the button doesn't work
- tapOn: FROM
- tapOn:
      id: "amount-percentage-text-50"
- tapOn:
      id: "amount-percentage-button-50"

- assertVisible:
      text: "1.25"
      id: "from-token-selector-amount-input"

- waitForAnimationToEnd

# 7. Verify Trade Details are visible (optional, but good check)
- assertVisible:
      id: "trade-details-card"
- assertVisible:
      id: "trade-details-exchange-rate"
- assertVisible:
      id: "trade-details-network-fee"
- assertVisible:
      id: "trade-button"
- tapOn:
      id: "trade-button"

- waitForAnimationToEnd
- assertVisible: "Bottom sheet backdrop"
- tapOn:
      id: "confirm-trade-button"
- waitForAnimationToEnd

- assertVisible: "Transaction Finalized!"
- tapOn:
      id: trade-status-action-button

- waitForAnimationToEnd
- assertNotVisible: "Bottom sheet backdrop"
- assertVisible:
      id: "home-screen"
